# ai-support-platform

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/agent/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
services/agent/src/: config.py  main.py
services/agent/src/application/dtos/: agent_dto.py  rag_dto.py
services/agent/src/application/ports/input/: create_agent.py  delete_agent.py  get_agent.py  get_agents_by_conversation_ids.py  ingest_documents.py  list_agents.py  query_agent.py  (+1 more)
services/agent/src/application/usecases/: create_agent.py  delete_agent.py  get_agent.py  get_agents_by_conversation_ids.py  ingest_documents.py  list_agents.py  query_agent.py  update_agent.py
services/agent/src/domain/entities/: agent.py  document.py  rag_chunk.py
services/agent/src/domain/errors/: agent_not_found.py
services/agent/src/infra/langchain/: conversation_memory.py  mongo_vector_store.py  rag_pipeline.py
services/agent/src/infra/modules/: container.py
services/agent/src/infra/redis/: rag_cache.py  redis_client.py
services/agent/src/infra/repositories/: mongo_agent_repository.py
services/agent/src/presentation/grpc/: agent_servicer.py  rag_servicer.py  server.py
services/agent/src/presentation/http/: app.py
services/agent/src/presentation/presenters/: agent_presenter.py  rag_presenter.py
services/agent/tests/: conftest.py
services/agent/tests/unit/usecases/: test_conversation_memory.py  test_get_agents_by_conversation_ids.py  test_query_agent.py
(+324 files in other folders)
