[project]
name = "agent-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "grpcio>=1.67.0",
    "grpcio-tools>=1.67.0",
    "grpcio-reflection>=1.67.0",
    "protobuf>=5.28.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mongodb>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "redis[asyncio]>=5.2.0",
    "pydantic-settings>=2.6.0",
    "dependency-injector>=4.45.0",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
